--- a/blog-contents/accessible-slider-reactjs.mdx
+++ b/blog-contents/accessible-slider-reactjs.mdx
@@ -498,8 +498,6 @@ And here's the result
 
 ![GIF of the completed slider](/images/blog/accessible_slider_react_demo.gif)
 
-P/S: Special appreciation to <a href="https://www.instagram.com/the_man_prvnce/" target="_blank"><strong>The Man Prvnce</strong></a> for helping design the cover image for this post
-
 
 ## Conclusion
 In this article we embarked on creating an accessible Slider. By leveraging the capabilities of a custom hook, we've centralized the logic, enhancing maintainability and reusability in our codebase. 
@@ -509,3 +507,5 @@ of accessibility in web development.
 Our custom hook took care of intricate details, such as handling various pointer and keyboard events, 
 ensuring a harmonious experience across different user inputs. Incorporating accessibility 
 attributes ensures that our slider is usable by everyone, regardless of their abilities.
+
+PS: Special appreciation to <a href="https://www.instagram.com/the_man_prvnce/" target="_blank"><strong>The Man Prvnce</strong></a> for helping design the cover image for this post
