--- a/blog-contents/accessible-slider-reactjs.mdx
+++ b/blog-contents/accessible-slider-reactjs.mdx
@@ -1,8 +1,10 @@
 ---
 title: A Guide to Crafting a Reusable and Accessible Slider Component in React.js
-date: "2024-01-08"
+publishedAt: "2024-01-08"
 description: Learn how to create an accessible slider in web development using a custom hook. Dive into the implementation details, from handling pointer and keyboard events to incorporating accessibility attributes. Enhance user experience with a slider that caters to diverse abilities, ensuring inclusivity in your web applications.
 image: "/images/blog/accessible_slider_react.png" 
+slug: 'a-guide-to-crafting-a-reusable-and-accessible-slider-component-in-reactjs'
+tags: ["react", "web-development", "accessibility", "slider", "custom-hook"]
 ---
 
 ## Introduction
